[package]
name = "vvcnv"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.24", features = ["derive"] }
console = "0.15.10"
ffmpeg-sidecar = "2.0.5"
futures = "0.3.31"
humansize = "2.1.3"
indicatif = "0.17.9"
tokio = { version = "1.43.0", features = ["full"] }
